# ComfyUI-QwenTTS

./: AILab_QwenTTS.py  README.md  __init__.py  pyproject.toml  requirements.txt
example_workflows/: QwenTTS.json
qwen_tts/core/models/: modeling_qwen3_tts.py
web/js/: appearance.js
