[project]
name = "ComfyUI-QwenTTS"
description = "A clean, efficient ComfyUI custom node pack for Qwen3-TTS. It provides CustomVoice, VoiceDesign, and VoiceClone workflows with strict ComfyUI compatibility and practical controls for quality, speed, and stability."
version = "1.0.1"
license = {file = "LICENSE"}

dependencies = [
  "accelerate>=1.12.0",
  "einops>=0.8.1",
  "huggingface_hub",
  "librosa>=0.11.0",
  "numpy",
  "sentencepiece>=0.2.1",
  "soundfile>=0.13.1",
  "tiktoken>=0.12.0",
  "torch>=2.9.1",
  "torchaudio>=2.9.1",
  "transformers>=4.57.3",
]
    
[project.urls]
Repository = "https://github.com/1038lab/ComfyUI-QwenTTS"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "ailab"
DisplayName = "ComfyUI-QwenTTS"
Icon = ""
